# sec-integration

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
core/: client.py  constants.py  handler.py  utils.py
tests/: conftest.py  test_client.py  test_handler.py
tests/test_data/: Apple_10-K_2024-11-01.pkl  apple_submissions_20251020.pkl
